Bundled the Websocket-Controller into an interface.